// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tokens/FontFamily Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="font-family"
      style={
        Object {
          "fontFamily": Array [
            "Quicksand",
            "Arial",
            "sans-serif",
          ],
        }
      }
    >
      Depend noticed bones Edge disturbing flesh heard cream. Morninged facial judgment Hobbit fortress. Camp flatten buy dagger Sit. Leagues sweeter 1400 mean friend unlost Déagol trade stuffing? Smithy's jiffy merely treacherous cozy interesting ask seat Thror's.
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-family-sans)
      </span>
      <span
        className="label"
      >
        Quicksand, Arial, sans-serif
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/FontFamily Types 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="font-family"
      style={
        Object {
          "fontFamily": Array [
            "Quicksand",
            "Arial",
            "sans-serif",
          ],
        }
      }
    >
      Depend noticed bones Edge disturbing flesh heard cream. Morninged facial judgment Hobbit fortress. Camp flatten buy dagger Sit. Leagues sweeter 1400 mean friend unlost Déagol trade stuffing? Smithy's jiffy merely treacherous cozy interesting ask seat Thror's.
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-family-sans)
      </span>
      <span
        className="label"
      >
        Quicksand, Arial, sans-serif
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-family"
      style={
        Object {
          "fontFamily": Array [
            "'Roboto Mono'",
            "'Courier New'",
            "monospace",
          ],
        }
      }
    >
      Depend noticed bones Edge disturbing flesh heard cream. Morninged facial judgment Hobbit fortress. Camp flatten buy dagger Sit. Leagues sweeter 1400 mean friend unlost Déagol trade stuffing? Smithy's jiffy merely treacherous cozy interesting ask seat Thror's.
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-family-mono)
      </span>
      <span
        className="label"
      >
        'Roboto Mono', 'Courier New', monospace
      </span>
    </div>
  </div>
</div>
`;
